--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua Cedeno</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    Body of website
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
 </body>
 </html>
