--- a/index.html
+++ b/index.html
@@ -15,5 +15,22 @@
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
       </div>
+
+      <div class="background">
+        <img src="img/background.png" alt="">
+      </div>
+
+      <div class="Info">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor ducimus placeat 
+            magnam tempora quidem consectetur repudiandae praesentium illum cumque! Facilis 
+            maxime earum, necessitatibus veniam amet recusandae. Necessitatibus quasi aut aliquam.
+        </p>
+      </div>
 </body>
 </html>
